[package]
name = "wifilocation"
version = "0.3.0"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "Get your GPS location using WiFi hotspots"
repository = "https://github.com/booyaa/wifilocation"
documentation = "https://booyaa.github.io/wifilocation/wifilocation/index.html"
readme = "README.md"
keywords = ["wifi","geolocation","network","gps"]
license = "Apache-2.0"

[dependencies]
wifiscanner = "0.3.*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9" 
reqwest = "0.4"
