[package]
name = "wifilocation"
version = "0.3.0"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "Get your GPS location using WiFi hotspots"
repository = "https://github.com/booyaa/wifilocation"
documentation = "https://booyaa.github.io/wifilocation/wifilocation/index.html"
readme = "README.md"
keywords = ["wifi","geolocation","network","gps"]
license = "Apache-2.0"

[dependencies]
wifiscanner = "0.5.1"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
reqwest = "0.9.21"
